Поправил описания функций

--- a/Fake_news.ipynb
+++ b/Fake_news.ipynb
@@ -128,14 +128,30 @@
    "outputs": [],
    "source": [
     "def clear_text(text):\n",
+    "    \"\"\"\n",
+    "    Функция которая очищает полученный текст от лишних пробелов и специальных символов.\n",
+    "    Символы приводятся к нижнему регистру.\n",
+    "    ARGS\n",
+    "        text       # Текст который надо очистить от мусора\n",
+    "    Return\n",
+    "        lemm_text  # очищенный текст\n",
+    "    \"\"\"\n",
     "    text = text.lower()\n",
     "    text = re.sub(r'\\s+', ' ', text).strip()\n",
     "    return \" \".join((re.sub(r'[^a-zA-Zа-яА-ЯёЁ ]', ' ', text)).split())\n",
     "\n",
     "\n",
     "def lemmatize(text):\n",
+    "    \"\"\"\n",
+    "    Функция получает на вход текстовую строку, очищает от лишних символов и лемматизирует.\n",
+    "    ARGS\n",
+    "        text        # исходный текст\n",
+    "    \n",
+    "    RETURN\n",
+    "        lemm_text   # очищенный и лемматизированный текст\n",
+    "    \"\"\"\n",
     "#    m = Mystem()\n",
-    "    cleaned_text = clear_text(text)\n",
+    "    cleaned_text = clear_text(text)   # очистим текст\n",
     "    lemm_list = m.lemmatize(cleaned_text)\n",
     "    lemm_text = \"\".join(lemm_list)\n",
     "        \n",
@@ -188,12 +204,20 @@
    "outputs": [],
    "source": [
     "def display_cm(y_real, y_pred):\n",
+    "    \"\"\"\n",
+    "    Функция строит матрицу ошибок\n",
+    "    ARGS\n",
+    "        y_real   # фактические значения\n",
+    "        y_pred   #  прогнозные значения\n",
+    "    RETURN\n",
+    "        построенная матрица\n",
+    "    \"\"\"\n",
     "#  Строим матрицу ошибок\n",
     "    cm = confusion_matrix(y_real, y_pred)\n",
     "\n",
     "#  Визуализируем матрицу ошибок\n",
     "    plt.figure(figsize=(6, 3))\n",
-    "    sns.heatmap(cm, annot=True, fmt='d', cmap='crest')\n",
+    "    sns.heatmap(cm, annot=True, fmt='d', cmap='blue')\n",
     "    plt.xlabel('Предсказание')\n",
     "    plt.ylabel('Факт')\n",
     "    plt.title('Матрица ошибок')\n",
@@ -397,6 +421,10 @@
     "def to_date(text_date):\n",
     "    \"\"\"\n",
     "    Простая функция преобразования даты с обработкой ошибок\n",
+    "    ARGS\n",
+    "        text_date   # дата в текстовом формате вида : May 1, 2017\n",
+    "    RETURN\n",
+    "        pd.to_datetime(text_date)   # м дата формата 2017-05-01\n",
     "    \"\"\"\n",
     "    try:\n",
     "        return pd.to_datetime(text_date)\n",
@@ -985,7 +1013,11 @@
    "source": [
     "def lemmatize_with_limits(text, limits_tokens = 500):\n",
     "    \"\"\"\n",
+    "    Функция получает на вход строку текста, и \n",
+    "    ARGS\n",
     "\n",
+    "    RETURN\n",
+    "        \n",
     "    \"\"\"\n",
     "#    if len(text) <= 1:\n",
     "#        text = 'no text'\n",
