Поправил описания функций

--- a/Fake_news.ipynb
+++ b/Fake_news.ipynb
@@ -225,7 +225,14 @@
     "    return\n",
     "def show_metrics(y_test, y_pred, round_n=3):\n",
     "    \"\"\"\n",
-    "\n",
+    "    Функция выводит на экран значения некоторых метрик.\n",
+    "    Метрики расчиываются на основе факта и прогноза.\n",
+    "    ARGS\n",
+    "        y_test   # фактические значения\n",
+    "        y_pred   # прогнозные значения\n",
+    "        round_n  # округление до round_n знаков после запятой\n",
+    "    RETURN\n",
+    "        печатает указаные метрики\n",
     "    \"\"\"\n",
     "    roc = roc_auc_score(y_test, y_pred)\n",
     "    precision = precision_score(y_test, y_pred)\n",
@@ -1013,11 +1020,13 @@
    "source": [
     "def lemmatize_with_limits(text, limits_tokens = 500):\n",
     "    \"\"\"\n",
-    "    Функция получает на вход строку текста, и \n",
+    "    Функция получает на вход строку текста, очищает текст, лемматизирует первые N  слов.\n",
+    "    Всё что длинее, обрезается.\n",
     "    ARGS\n",
-    "\n",
+    "        text - исходный текстю\n",
+    "        limits_tokens - количчество слов для обработки.\n",
     "    RETURN\n",
-    "        \n",
+    "        lemmas - лемматизированный текст\n",
     "    \"\"\"\n",
     "#    if len(text) <= 1:\n",
     "#        text = 'no text'\n",
